# bazel-examples

./: .prettierrc  CONTRIBUTING.md  README.md
angular-ngc/: BUILD.bazel  WORKSPACE.bazel  defs.bzl  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json
angular-ngc/applications/demo/: BUILD.bazel  index.html  main.ts
angular-ngc/libraries/lib-a/: BUILD.bazel
angular-ngc/libraries/lib-a/src/lib/: lib-a.component.ts
angular-ngc/libraries/lib-a/src/lib/strings/: BUILD.bazel  index.ts
angular-ngc/tools/: BUILD.bazel  karma.bzl  karma.conf.js  ngc.esbuild.ts  prettier.bzl  rules_esbuild-pr32.patch
bzlmod/: README.md
check-npm-determinism/: WORKSPACE
protobufjs/: README.md  defs.bzl  pnpm-lock.yaml
react/create-react-app/: BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml
ts_project_transpiler/: README.md  babel.bzl  pnpm-lock.yaml
vue/: BUILD.bazel  README.md  pnpm-lock.yaml
vue/src/: App.vue
write_source_files/: WORKSPACE
