load("@aspect_bazel_lib//lib:directory_path.bzl", "directory_path")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

# The Angular ngc compiler
directory_path(
    name = "ngc_entrypoint",
    directory = "//:node_modules/@angular/compiler-cli/dir",
    path = "bundles/src/bin/ngc.js",
    visibility = ["//visibility:private"],
)

js_binary(
    name = "ngc",
    data = ["//:node_modules/@angular/compiler-cli"],
    entry_point = ":ngc_entrypoint",
    visibility = ["//visibility:public"],
)
