load("@aspect_bazel_lib//lib:directory_path.bzl", "directory_path")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//:defs.bzl", "ts_project")

# The Angular ngc compiler
directory_path(
    name = "ngc_entrypoint",
    directory = "//:node_modules/@angular/compiler-cli/dir",
    path = "bundles/src/bin/ngc.js",
    visibility = ["//visibility:private"],
)

js_binary(
    name = "ngc",
    data = ["//:node_modules/@angular/compiler-cli"],
    entry_point = ":ngc_entrypoint",
    visibility = ["//visibility:public"],
)

# ESBuild plugin to run the Angular linker
ts_project(
    name = "ngc.esbuild",
    srcs = ["ngc.esbuild.ts"],
    deps = [
        "//:node_modules/@types/babel__core",
        "//:node_modules/@types/node",
        "//:node_modules/@angular/compiler-cli",
        "//:node_modules/@babel/core",
    ],
    visibility = ["//visibility:public"],
    tsconfig = "//:tsconfig.node",
)
