load("//:defs.bzl", "ng_library")

package(default_visibility = ["//visibility:public"])

ng_library(
    name = "lib-a",
    package_name = "@ngc-example/lib-a",
    deps = [
        "//libraries/common",
        "//libraries/lib-a/src/lib/strings",
    ],
    test_deps = ["//libraries/common"],
)
